--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
    max-width: 100%;
    } 
   </style>
-</head
+</head>
 <body>
-  <h1>
+  
+ <nav>
+   <ol>
+     <li><a href="#taylor">个人简介</a></li>
+     <li><a href="#events">重要事件</a></li>
+     <li><a href="#awards">成就和荣誉</a></li>
+     <li><a href="#works">主要作品</a></li>
+     <li><a href="#pictures">生活照</a></li>
+     <li><a href="#life">生平</a></li>
+   </ol>
+ </nav>
+
+
+  <h1 id="taylor">
     泰勒斯威夫特
   </h1>
   <p>
     Taylor
     AlisonSwift，1989年12月13日－），是一名美国创作歌手、音乐制作人、慈善家、导演及演员。作为当今全世界最有影响力的歌手之一，她以创作关于她个人生活的歌曲、不使用修音以及她的甜美歌声而闻名，并以此受到了众多好评。
   </p>
-  <h2>
+  <h2 id="events">
     重要事件
   </h2>
 
@@ -38,7 +51,7 @@
       2009年《放手去爱》成为了美国最畅销的专辑之一，该张专辑赢得了四项格莱美奖，并使斯威夫特成为“年度专辑”奖项最年轻得主。
     </li>
   </ul>
-  <h2>
+  <h2 id="awards">
     成就和荣誉
   </h2>
   <ol>
@@ -49,7 +62,7 @@
     </li>
     <li>青少年选择奖获奖最多的歌手。 是全球数字销量前五名的音乐家之一。</li>
   </ol>
-  <h2>
+  <h2 id="works">
     主要作品
   </h2>
   <table>
@@ -92,13 +105,13 @@
     </tbody>
   </table>
 
-  <h2>生活照</h2>
+  <h2 id="pictures">生活照</h2>
 
   <div><img width="400" src="images/泰勒照片1.jpg" alt="图一"></div>
   <div><img width="400" src="images/泰勒照片2.jpg" alt="图二"></div>
   <div><img width="400" src="images/泰勒照片3.jpg" alt="图三"></div>
 
-<h2>生平</h2>
+<h2 id="life">生平</h2>
 <p>
     1989年12月13日，斯威夫特在宾夕法尼亚州雷丁出生其名源自乡村歌手詹姆斯·泰勒 。
     <p>
