--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       2006年发行的个人首张同名专辑在《公告牌》二百强专辑榜上获得了最高第五名的成绩，并成为了2000年代在该榜单上停留时间最长的专辑，专辑第三支单曲《我们的歌》在热门乡村歌曲榜上夺得了冠军，使斯威夫特成为了登上该榜单的最年轻歌手。
     </li>
     <li>
-      2008年斯威夫特的第二张专辑《放手去爱》发行，乡村与流行混合风格的歌曲《爱情故事》和《与我同在》大
+      2008年斯威夫特的第二张专辑《放手去爱》发行。
     </li>
     <li>
       2009年《放手去爱》成为了美国最畅销的专辑之一，该张专辑赢得了四项格莱美奖，并使斯威夫特成为“年度专辑”奖项最年轻得主。
@@ -55,8 +55,8 @@
     成就和荣誉
   </h2>
   <ol>
-    <li>史上第一位获得两次格莱美最高奖项《年度专辑》的女歌手</li>
-    <li>23项全美音乐奖（获得最多的女歌手）</li>
+    <li>史上第一位获得两次格莱美最高奖项《年度专辑》的女歌手。</li>
+    <li>23项全美音乐奖（获得最多的女歌手）。</li>
     <li>
       11项乡村音乐协会奖、8项乡村音乐学院奖、23项公告牌音乐奖、1项全英音乐奖和1项艾美奖。
     </li>
